2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Fix compilation for amd64 (format warnings).

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/api.h (GRUB_EFI_DEVICE_PATH_LENGTH): Use
	grub_get_unaligned16 rather than shifts.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/file.c: Use const char * rather than casting to
	non-const.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/probe.c: Add missing grub_device_close.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* INSTALL: Document linguas.sh.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove POTFILES.in and regenerate it in autogen.sh.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Move --directory/--override-directorry to grub-install_header and unify.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/morse.c: Macroify dih and dah.

2013-04-27  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>

	* include/grub/macho.h: Set GRUB_MACHO_FAT_EFI_MAGIC as unsigned.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ns8250.c: Systematically probe ports by writing
	to SR before using them.

2013-04-27  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>

	* util/ieee1275/ofpath.c (of_path_of_scsi): Fix path output for sas
	disks.
	(check_sas): Get sas_adress info.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c (grub_ahci_pciinit): Fix handling of empty
	ports.

2013-04-27  Leon Drugi <eyak>

	* grub-core/loader/multiboot_mbi2.c (grub_multiboot_load): Fix cast in
	BSS clearing.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Core compression test.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement grub_machine_get_bootlocation for ARC.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve AHCI detection and command issuing.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>
